--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Jasper8628/contact_tracer#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase-tools": "^9.1.0",
     "nodemon": "^2.0.6"
   }
 }
